Added responsiveness for tablet and desktop

--- a/events.html
+++ b/events.html
@@ -11,58 +11,75 @@
     <nav>
 
     </nav>
-
-    <header>Listening Sessions</header>
-
     <section class="hero">
-      <img src="#SampleEvent" alt="Live Event">
+      <img id = "heroImage" src="./img/events-hero-image.jpeg" alt="2 children learning to DJ">
     </section>
 
 
     <div class="line"></div>
 
-    <section class="pageDescription">
-      <p>Description of events will be here so people can know
-      waht our listening session can consist of filler ends here</p>
-    </section>
+    <header class="pageHeader">
+        Listening sessions
+        <p class="pageDescription">Come to one of our Listening sessions
+           to gain an appreciation of music in the Charlotte area</p>
+    </header>
     <main>
       <div class="eventContainer">
-        <img class="eventImage" src="#Eventimage" alt="event image">
+        <img class="eventImage" src="./img/dj-armsleeve-event.jpeg"
+        alt="Dj Event with crown in attendence ">
         <div class="eventDetails">
-              <header>Event Name </header>
+              <header>DJ ArmSleeve Live</header>
             <p class="date">9/23/22</p>
-            <p class="eventDescription">Event specific one liner</p>
-            <a class="eventLink"><button class="eventLinkButton" type="button" name="button">See Details</button></a>
+            <p class="eventDescription">A show to remember</p>
+            <a href="/events.html" class="eventLink">
+              <button class="eventLinkButton" type="button" name="button">
+                See Details
+              </button>
+            </a>
         </div>
       </div>
 
       <div class="eventContainer">
-        <img class="eventImage" src="#Eventimage" alt="event image">
+        <img class="eventImage" src="./img/questlove-event.jpeg"
+        alt="Questlove headshot">
         <div class="eventDetails">
-              <header>Event Name </header>
-            <p class="date">9/23/22</p>
-            <p class="eventDescription">Event specific one liner</p>
-            <a class="eventLink"><button class="eventLinkButton" type="button" name="button">See Details</button></a>
+              <header>Quest Love Q&A Panel</header>
+            <p class="date">9/30/22</p>
+            <p class="eventDescription">find knowledge on this quest</p>
+            <a href="/events.html" class="eventLink">
+              <button class="eventLinkButton" type="button" name="button">
+                See Details
+              </button>
+            </a>
+      </div>
+    </div>
+
+      <div class="eventContainer">
+        <img class="eventImage" src="./img/drum-circle-event.jpeg"
+        alt="Drum circle group in a park">
+        <div class="eventDetails">
+              <header>Park N' Drum </header>
+            <p class="date">10/07/22</p>
+            <p class="eventDescription">Bring a drum or be the drum</p>
+            <a href="/events.html" class="eventLink">
+              <button class="eventLinkButton" type="button" name="button">
+                See Details
+              </button>
+            </a>
         </div>
       </div>
 
       <div class="eventContainer">
-        <img class="eventImage" src="#Eventimage" alt="event image">
+        <img class="eventImage" src="./img/music-theory-event.jpeg" alt="event image">
         <div class="eventDetails">
-              <header>Event Name </header>
-            <p class="date">9/23/22</p>
-            <p class="eventDescription">Event specific one liner</p>
-            <a class="eventLink"><button class="eventLinkButton" type="button" name="button">See Details</button></a>
-        </div>
-      </div>
-
-      <div class="eventContainer">
-        <img class="eventImage" src="#Eventimage" alt="event image">
-        <div class="eventDetails">
-              <header>Event Name </header>
-            <p class="date">9/23/22</p>
-            <p class="eventDescription">Event specific one liner</p>
-            <a class="eventLink"><button class="eventLinkButton" type="button" name="button">See Details</button></a>
+              <header>Music Theory 101</header>
+            <p class="date">09/16/22</p>
+            <p class="eventDescription">Level up your music playing</p>
+            <a href="/events.html" class="eventLink">
+              <button class="eventLinkButton" type="button" name="button">
+                See Details
+              </button>
+            </a>
         </div>
       </div>
     </main>
