more cosmetic changes

--- a/events.html
+++ b/events.html
@@ -17,11 +17,13 @@
 
 
     <div class="line"></div>
+    <section>
 
-    <header class="pageHeader">
-        Listening sessions
-        <p class="pageDescription">Come to one of our Listening sessions
-           to gain an appreciation of music in the Charlotte area</p>
+    <header>
+    <p class="pageHeader">Listening sessions</p>
+    <p class="pageDescription">Come to one of our Listening sessions
+           to gain an appreciation of music in the Charlotte are
+    </p>
     </header>
     <main>
       <div class="eventContainer">
