added nav styling

--- a/events.html
+++ b/events.html
@@ -5,19 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Discography Events</title>
+    <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/events.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
+
   </head>
   <body>
-    <nav>
 
-    </nav>
+<!-- NAV BAR HTML -->
+    <header>
+        <nav>
+            <div class="logo">Discography For The Ages</div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="catalog.html">Catalog</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <section></section>
+    </header>
+
     <section class="hero">
-      <img id = "heroImage" src="./img/events-hero-image.jpeg" alt="2 children learning to DJ">
+      <!--<img id = "heroImage" src="./img/events-hero-image.jpeg" alt="2 children learning to DJ">-->
     </section>
 
 
     <div class="line"></div>
-    <section>
+
 
     <header>
     <p class="pageHeader">Listening sessions</p>
