--- a/events.html
+++ b/events.html
@@ -30,21 +30,21 @@
     </header>
 
     <section class="hero">
-      <!--<img id = "heroImage" src="./img/events-hero-image.jpeg" alt="2 children learning to DJ">-->
+    <img id = "heroImage" src="./img/events-hero-image.jpeg" alt="2 children learning to DJ">
     </section>
 
 
     <div class="line"></div>
 
 
-    <header>
-    <p class="pageHeader">Listening sessions</p>
+    <header class="pageHeader">
+    <p class="headerTitle">Listening sessions</p>
     <p class="pageDescription">Come to one of our Listening sessions
            to gain an appreciation of music in the Charlotte are
     </p>
     </header>
     <main>
-      <div class="eventContainer">
+      <section  id="event1" class="eventContainer">
         <img class="eventImage" src="./img/dj-armsleeve-event.jpeg"
         alt="Dj Event with crown in attendence ">
         <div class="eventDetails">
@@ -57,9 +57,9 @@
               </button>
             </a>
         </div>
-      </div>
+      </section>
 
-      <div class="eventContainer">
+      <section id="event2" class="eventContainer">
         <img class="eventImage" src="./img/questlove-event.jpeg"
         alt="Questlove headshot">
         <div class="eventDetails">
@@ -72,9 +72,9 @@
               </button>
             </a>
       </div>
-    </div>
+    </section>
 
-      <div class="eventContainer">
+      <section id="event3"class="eventContainer">
         <img class="eventImage" src="./img/drum-circle-event.jpeg"
         alt="Drum circle group in a park">
         <div class="eventDetails">
@@ -87,9 +87,9 @@
               </button>
             </a>
         </div>
-      </div>
+      </section>
 
-      <div class="eventContainer">
+      <section id="event4" class="eventContainer">
         <img class="eventImage" src="./img/music-theory-event.jpeg" alt="event image">
         <div class="eventDetails">
               <header>Music Theory 101</header>
@@ -101,7 +101,7 @@
               </button>
             </a>
         </div>
-      </div>
+      </section>
     </main>
   </body>
 </html>
