--- a/events.html
+++ b/events.html
@@ -103,5 +103,29 @@
         </div>
       </section>
     </main>
+    <!-- FOOTER HTML -->
+    <footer>
+      <article class="socials">
+
+      <a class="social-icon" href="https://twitter.com" target="_blank">
+      <ion-icon name="logo-twitter"></ion-icon>
+      </a>
+
+      <a class="social-insta" href="https://instagram.com" target="_blank">
+      <ion-icon name="logo-instagram"></ion-icon>
+      </a>
+
+      <a class="social-tiktok" href="https://tiktok.com" target="_blank">
+      <ion-icon name="logo-tiktok"></ion-icon>
+      </a>
+
+      <a class="social-snap" href="https://snapchat.com" target="_blank">
+      <ion-icon name="logo-snapchat"></ion-icon>
+      </a>
+
+      <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+      </article>
+      </footer>
   </body>
 </html>
