--- a/catalog.html
+++ b/catalog.html
@@ -5,13 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="catalog.css">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
     <title>Catalog</title>
 </head>
 <body>
     
-  <div class="header">
-    <h2>Catalog</h2>
-  </div>
+  <header>
+    <nav>
+        <article class="logo">Discography For The Ages</article>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </a>
+          <article class="navbar-links">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="catalog.html">Catalog</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </article>
+    </nav>
+</header>
   
   <section class="row">
 
@@ -61,7 +78,7 @@
 
       <article class="card">
         <h2>Catalog Mission</h2>
-        <h4>At {Organization Name} we strive to provide our community with a vast collection of music. When {Founder Name} started this organization in {Start Year} he dreamed of opening up a world of opportunities for all ages through music and sound. Ranging from Hard Rock to Bluegrass and Hip-Hop, {Organization Name} has every genre available for children, and adults at the ready. We’ve recently been able to celebrate the addition of our World Culture library as well. We now have genres such as J-Pop, Reggaeton, Latin, and many more to choose from.</h4>
+        <h4>At Discography For The Ages, we strive to provide our community with a vast collection of music. When Khire Green, Justic Cameron, Eduardo Davila Nava & Logan Trout started this organization in 1986, they dreamed of opening up a world of opportunities for all ages through music and sound. Ranging from Hard Rock to Bluegrass and Hip-Hop, Discography For The Ages has every genre available for children, and adults at the ready. We’ve recently been able to celebrate the addition of our World Culture library as well. We now have genres such as J-Pop, Reggaeton, Latin, and many more to choose from.</h4>
       <article>
 
       <article class="card">
