mobile + tablet responsive nave bar

--- a/events.html
+++ b/events.html
@@ -66,7 +66,7 @@
               <header>Quest Love Q&A Panel</header>
             <p class="date">9/30/22</p>
             <p class="eventDescription">find knowledge on this quest</p>
-            <a href="/events.html" class="eventLink">
+            <a href="about-us.html" class="eventLink">
               <button class="eventLinkButton" type="button" name="button">
                 See Details
               </button>
@@ -81,7 +81,7 @@
               <header>Park N' Drum </header>
             <p class="date">10/07/22</p>
             <p class="eventDescription">Bring a drum or be the drum</p>
-            <a href="/events.html" class="eventLink">
+            <a href="about-us" class="eventLink">
               <button class="eventLinkButton" type="button" name="button">
                 See Details
               </button>
@@ -90,12 +90,13 @@
       </section>
 
       <section id="event4" class="eventContainer">
-        <img class="eventImage" src="./img/music-theory-event.jpeg" alt="event image">
+              <img class="eventImage" src="./img/music-theory-event.jpeg" alt="event image">
         <div class="eventDetails">
-              <header>Music Theory 101</header>
+            <header class="eventComplete">Event Complete</header>
+            <header>Music Theory 101</header>
             <p class="date">09/16/22</p>
             <p class="eventDescription">Level up your music playing</p>
-            <a href="/events.html" class="eventLink">
+            <a href="about-us" class="eventLink">
               <button class="eventLinkButton" type="button" name="button">
                 See Details
               </button>
