added footer fileand some comments

--- a/events.html
+++ b/events.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Discography Events</title>
     <link rel="stylesheet" href="./css/nav.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="./css/events.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
