seperated css files for catalog

--- a/catalog.html
+++ b/catalog.html
@@ -4,32 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="catalog.css">
+    <link rel="stylesheet" href="./css/catalog.css">
+    <link rel="stylesheet" href="./css/nav.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
     <title>Catalog</title>
 </head>
 <body>
-    
-  <header>
-    <nav>
-        <article class="logo">Discography For The Ages</article>
-        <a href="#" class="toggle-button">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-          </a>
-          <article class="navbar-links">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about-us.html">About Us</a></li>
-            <li><a href="catalog.html">Catalog</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </article>
-    </nav>
-</header>
-  
+  <nav>
+      <article class="logo">Discography For The Ages</article>
+      <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
+        <article class="navbar-links">
+      <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about-us.html">About Us</a></li>
+          <li><a href="catalog.html">Catalog</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="contact.html">Contact</a></li>
+      </ul>
+  </article>
+  </nav>
+
   <section class="row">
 
     <section class="leftcolumn">
@@ -109,7 +108,31 @@
       </article>
     </aside>
   </section>
+  <!-- FOOTER HTML -->
+  <footer>
+    <article class="socials">
 
-    
+    <a class="social-icon" href="https://twitter.com" target="_blank">
+    <ion-icon name="logo-twitter"></ion-icon>
+    </a>
+
+    <a class="social-insta" href="https://instagram.com" target="_blank">
+    <ion-icon name="logo-instagram"></ion-icon>
+    </a>
+
+    <a class="social-tiktok" href="https://tiktok.com" target="_blank">
+    <ion-icon name="logo-tiktok"></ion-icon>
+    </a>
+
+    <a class="social-snap" href="https://snapchat.com" target="_blank">
+    <ion-icon name="logo-snapchat"></ion-icon>
+    </a>
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    </article>
+    </footer>
+
+
 </body>
 </html>
