remapped images in events

--- a/events.html
+++ b/events.html
@@ -31,7 +31,7 @@
     </header>
 
     <section class="hero">
-    <img id = "heroImage" src="./img/events-hero-image.jpeg" alt="2 children learning to DJ">
+    <img id = "heroImage" src="./images/events-hero-image.jpeg" alt="2 children learning to DJ">
     </section>
 
 
@@ -46,7 +46,7 @@
     </header>
     <main>
       <section  id="event1" class="eventContainer">
-        <img class="eventImage" src="./img/dj-armsleeve-event.jpeg"
+        <img class="eventImage" src="./images/dj-armsleeve-event.jpeg"
         alt="Dj Event with crown in attendence ">
         <div class="eventDetails">
               <header>DJ ArmSleeve Live</header>
@@ -61,7 +61,7 @@
       </section>
 
       <section id="event2" class="eventContainer">
-        <img class="eventImage" src="./img/questlove-event.jpeg"
+        <img class="eventImage" src="./images/questlove-event.jpeg"
         alt="Questlove headshot">
         <div class="eventDetails">
               <header>Quest Love Q&A Panel</header>
@@ -76,7 +76,7 @@
     </section>
 
       <section id="event3"class="eventContainer">
-        <img class="eventImage" src="./img/drum-circle-event.jpeg"
+        <img class="eventImage" src="./images/drum-circle-event.jpeg"
         alt="Drum circle group in a park">
         <div class="eventDetails">
               <header>Park N' Drum </header>
@@ -91,7 +91,7 @@
       </section>
 
       <section id="event4" class="eventContainer">
-              <img class="eventImage" src="./img/music-theory-event.jpeg" alt="event image">
+              <img class="eventImage" src="./images/music-theory-event.jpeg" alt="event image">
         <div class="eventDetails">
             <header class="eventComplete">Event Complete</header>
             <header>Music Theory 101</header>
