Pushed rest of code

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,25 @@
     <title>Contact Page</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <article class="logo">Discography For The Ages</article>
+            <a href="#" class="toggle-button">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </a>
+            <article class="navbar-links">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="catalog.html">Catalog</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </article>
+        </nav>
+    </header>
     <div class="contactinfo">
     <h1>Helpful Information</h1>
     <p>
