--- a/about-us.html
+++ b/about-us.html
@@ -14,7 +14,13 @@
     <!-- NAV BAR HTML -->
     <header>
         <nav>
-            <div class="logo">Discography For The Ages</div>
+            <article class="logo">Discography For The Ages</article>
+            <a href="#" class="toggle-button">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+              </a>
+              <article class="navbar-links">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about-us.html">About Us</a></li>
@@ -22,6 +28,7 @@
                 <li><a href="events.html">Events</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
+        </article>
         </nav>
         <section></section>
     </header>
@@ -36,9 +43,8 @@
 
         <article id="item-1">
             <h2>Mission Statement</h2>
-            <p>Focusing on music preservation and expeousre to all demographics, our mission is to provide anyone with the ability to explore and become excapsulated by all genres of music.</p>
-            <br>
-            <p>"Being exposed to the articleersity of music when I was a kid made me the actor I am today. As an actor, you have to adapt and do so many different things." - Will Chase</p>
+            <p>Focusing on music preservation and expeousre to all demographics, our mission is to<br> provide anyone with the ability to explore and become excapsulated by all genres of music.</p>
+            <p>"Being exposed to the articleersity of music when I was a kid <br>made me the actor I am today. As an actor, you have to adapt and do so many different things." - Will Chase</p>
         </article>
 
         <article id="item-2">
@@ -53,7 +59,7 @@
 
         <article id="item-4">
             <h2>Purpose</h2>
-            <p>Discography for the Ages strives to give everyone the opportunity to expand their musical palette. Whether if you like Hip-Hop, EDM, House, Country, Indie, etc., our catalog is open to anyone who is willing to listen!</p>
+            <p>Discography for the Ages strives to give everyone the opportunity to expand their musical palette. Whether if you like Hip-Hop, EDM, House, Country, Indie, etc., our catalog is<br> open to anyone who is willing to listen!</p>
         </article>
     </article>
       
