--- a/contact.html
+++ b/contact.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="contact.css" rel="stylesheet" type="text/css">
+    <link href="./css/contact.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="./css/nav.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
+
     <title>Contact Page</title>
 </head>
 <body>
+  <main>
     <header>
         <nav>
             <article class="logo">Discography For The Ages</article>
-            <a href="#" class="toggle-button">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </a>
-            <article class="navbar-links">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about-us.html">About Us</a></li>
@@ -70,7 +69,7 @@
         <label for="textbox">Thoughts, Questions, Concerns? </label>
         <br>
         <br>
-        <input type="textbox" id="textbox" name="textbox" > 
+        <input type="textbox" id="textbox" name="textbox" >
         </div>
         <br>
         <br>
@@ -79,5 +78,30 @@
         <input type="reset">
         </div>
     </form>
+  </main>
 </body>
+<!-- FOOTER HTML -->
+<footer>
+  <article class="socials">
+
+  <a class="social-icon" href="https://twitter.com" target="_blank">
+  <ion-icon name="logo-twitter"></ion-icon>
+  </a>
+
+  <a class="social-insta" href="https://instagram.com" target="_blank">
+  <ion-icon name="logo-instagram"></ion-icon>
+  </a>
+
+  <a class="social-tiktok" href="https://tiktok.com" target="_blank">
+  <ion-icon name="logo-tiktok"></ion-icon>
+  </a>
+
+  <a class="social-snap" href="https://snapchat.com" target="_blank">
+  <ion-icon name="logo-snapchat"></ion-icon>
+  </a>
+
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  </article>
+  </footer>
 </html>
