proper detail links and event complete is responsive

--- a/events.html
+++ b/events.html
@@ -52,7 +52,7 @@
               <header>DJ ArmSleeve Live</header>
             <p class="date">9/23/22</p>
             <p class="eventDescription">A show to remember</p>
-            <a href="/events.html" class="eventLink">
+            <a href="contact.html" class="eventLink">
               <button class="eventLinkButton" type="button" name="button">
                 See Details
               </button>
@@ -67,7 +67,7 @@
               <header>Quest Love Q&A Panel</header>
             <p class="date">9/30/22</p>
             <p class="eventDescription">find knowledge on this quest</p>
-            <a href="about-us.html" class="eventLink">
+            <a href="contact.html" class="eventLink">
               <button class="eventLinkButton" type="button" name="button">
                 See Details
               </button>
@@ -82,7 +82,7 @@
               <header>Park N' Drum </header>
             <p class="date">10/07/22</p>
             <p class="eventDescription">Bring a drum or be the drum</p>
-            <a href="about-us" class="eventLink">
+            <a href="contact.html" class="eventLink">
               <button class="eventLinkButton" type="button" name="button">
                 See Details
               </button>
@@ -97,7 +97,7 @@
             <header>Music Theory 101</header>
             <p class="date">09/16/22</p>
             <p class="eventDescription">Level up your music playing</p>
-            <a href="about-us" class="eventLink">
+            <a href="contact.html" class="eventLink">
               <button class="eventLinkButton" type="button" name="button">
                 See Details
               </button>
