--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="about-us.css" rel="stylesheet" type="text/css" />
+    <link href="./css/about-us.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/nav.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
